# chemish

./: .gitignore  CMakeLists.txt  README.md
cmake/: CompileShaders.cmake
include/chemish/: camera.hpp  commands.hpp  debug.hpp  device.hpp  mesh.hpp  pipeline.hpp  renderer.hpp  shader.hpp  swapchain.hpp  sync.hpp  vertex.hpp
include/chemish/rhi/: buffer.hpp  device.hpp  handle.hpp  pool.hpp  shader.hpp
include/chemish/rhi/vulkan/: buffer.hpp  commands.hpp  descriptor_set.hpp  device.hpp  pipeline.hpp  shader.hpp  swapchain.hpp  sync.hpp
include/chemish/vulkan/: device.hpp
shaders/: triangle.slang  triangle.spv
src/: CMakeLists.txt  commands.cpp  debug.cpp  device.cpp  main.cpp  pipeline.cpp  renderer.cpp  shader.cpp  swapchain.cpp  sync.cpp
src/rhi/vulkan/: buffer.cpp  commands.cpp  descriptor_set.cpp  device.cpp  pipeline.cpp  shader.cpp  swapchain.cpp  sync.cpp
src/vulkan/: device.cpp
